chore(@nestjs) publish v9.3.0 release

--- a/packages/platform-fastify/package.json
+++ b/packages/platform-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/platform-fastify",
-  "version": "9.3.0-beta.3",
+  "version": "9.3.0",
   "description": "Nest - modern, fast, powerful node.js web framework (@platform-fastify)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
