--- a/packages/platform-socket.io/package.json
+++ b/packages/platform-socket.io/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/platform-socket.io",
-  "version": "9.3.0-beta.3",
+  "version": "9.3.0",
   "description": "Nest - modern, fast, powerful node.js web framework (@platform-socket.io)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
