--- a/packages/websockets/package.json
+++ b/packages/websockets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/websockets",
-  "version": "9.3.0-beta.3",
+  "version": "9.3.0",
   "description": "Nest - modern, fast, powerful node.js web framework (@websockets)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
@@ -17,8 +17,8 @@
     "tslib": "2.4.1"
   },
   "devDependencies": {
-    "@nestjs/common": "^9.3.0-beta.3",
-    "@nestjs/core": "^9.3.0-beta.3"
+    "@nestjs/common": "9.3.0",
+    "@nestjs/core": "9.3.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^9.0.0",
