--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,8 +32,7 @@
     "fast-safe-stringify": "2.1.1",
     "iterare": "1.2.1",
     "path-to-regexp": "3.2.0",
-    "tslib": "2.5.0",
-    "uuid": "9.0.0"
+    "tslib": "2.5.0"
   },
   "devDependencies": {
     "@nestjs/common": "9.3.2"
