--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,9 +31,9 @@
     "@nuxtjs/opencollective": "0.3.2",
     "fast-safe-stringify": "2.1.1",
     "iterare": "1.2.1",
+    "uid": "2.0.1",
     "path-to-regexp": "3.2.0",
-    "tslib": "2.5.0",
-    "uid": "2.0.1"
+    "tslib": "2.5.0"
   },
   "devDependencies": {
     "@nestjs/common": "9.3.3"
