--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "light-my-request": "5.8.0",
     "lint-staged": "13.1.0",
     "markdown-table": "2.0.0",
+    "memphis-dev": "^0.4.9",
     "merge-graphql-schemas": "1.7.8",
     "mocha": "10.2.0",
     "mongoose": "6.8.4",
