--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
+    "@apollo/server": "4.4.1",
     "@codechecks/client": "0.1.12",
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-angular": "17.4.4",
@@ -110,8 +111,6 @@
     "@typescript-eslint/parser": "4.33.0",
     "amqp-connection-manager": "4.1.11",
     "amqplib": "0.10.3",
-    "apollo-server-core": "3.12.0",
-    "apollo-server-express": "3.12.0",
     "artillery": "1.7.9",
     "body-parser": "1.20.2",
     "bytes": "3.1.2",
