--- a/sample/19-auth-jwt/package.json
+++ b/sample/19-auth-jwt/package.json
@@ -22,12 +22,8 @@
   "dependencies": {
     "@nestjs/common": "9.0.1",
     "@nestjs/core": "9.0.5",
-    "@nestjs/jwt": "10.0.1",
-    "@nestjs/passport": "9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "9.0.1",
-    "passport": "0.6.0",
-    "passport-jwt": "4.0.1",
-    "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5"
@@ -40,6 +36,11 @@
     "@types/jest": "28.1.4",
     "@types/node": "18.0.3",
     "@types/supertest": "2.0.12",
+    "@typescript-eslint/eslint-plugin": "5.30.5",
+    "@typescript-eslint/parser": "5.30.5",
+    "eslint": "8.19.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
     "jest": "28.1.2",
     "prettier": "2.7.1",
     "supertest": "6.2.4",
@@ -47,11 +48,6 @@
     "ts-loader": "9.3.1",
     "ts-node": "10.8.2",
     "tsconfig-paths": "4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.30.5",
-    "@typescript-eslint/parser": "5.30.5",
-    "eslint": "8.19.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
     "typescript": "4.7.4"
   },
   "jest": {
