sample: update 20-cache sample

--- a/sample/20-cache/package.json
+++ b/sample/20-cache/package.json
@@ -19,6 +19,7 @@
     "test:e2e": "echo 'No e2e tests implemented yet.'"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "1.0.0",
     "@nestjs/common": "9.3.12",
     "@nestjs/core": "9.3.12",
     "@nestjs/platform-express": "9.3.12",
