chore: update repo references in package.json files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://nestjs.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nestjs/nest"
+    "url": "https://github.com/nestjs/nest.git"
   },
   "funding": {
     "type": "opencollective",
