--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,7 +10,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nestjs/nest"
+    "url": "https://github.com/nestjs/nest.git",
+    "directory": "packages/common"
   },
   "publishConfig": {
     "access": "public"
