--- a/packages/platform-socket.io/package.json
+++ b/packages/platform-socket.io/package.json
@@ -11,7 +11,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nestjs/nest"
+    "url": "https://github.com/nestjs/nest.git",
+    "directory": "packages/platform-socket.io"
   },
   "publishConfig": {
     "access": "public"
