--- a/packages/websockets/package.json
+++ b/packages/websockets/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nestjs/nest"
+    "url": "https://github.com/nestjs/nest.git",
+    "directory": "packages/websockets"
   },
   "publishConfig": {
     "access": "public"
