--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@codechecks/client": "0.1.12",
     "@commitlint/cli": "17.6.1",
     "@commitlint/config-angular": "17.6.1",
-    "@fastify/cors": "^8.0.0",
+    "@fastify/cors": "8.2.1",
     "@fastify/formbody": "7.4.0",
     "@fastify/middie": "8.1.0",
     "@fastify/multipart": "7.6.0",
