fix(express): Extend MulterOptions dest to match Multer's engine
Fixes nestjs/nest#11607

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@types/gulp": "4.0.11",
     "@types/http-errors": "2.0.1",
     "@types/mocha": "10.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "20.2.5",
     "@types/sinon": "10.0.15",
     "@types/supertest": "2.0.12",
