ci: enable coveralls verbose mode

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "move:node_modules": "gulp move:node_modules",
     "build:samples": "gulp install:samples && npm run build && npm run move:samples && gulp build:samples && gulp test:samples && gulp test:e2e:samples",
     "codechecks:benchmarks": "codechecks ./tools/benchmarks/check-benchmarks.ts",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc report --reporter=text-lcov | coveralls -v",
     "format": "prettier \"**/*.ts\" \"packages/**/*.json\" --ignore-path ./.prettierignore --write && git status",
     "postinstall": "opencollective",
     "test": "mocha packages/**/*.spec.ts",
