--- a/sample/31-graphql-federation-code-first/posts-application/package.json
+++ b/sample/31-graphql-federation-code-first/posts-application/package.json
@@ -1,9 +1,7 @@
 {
   "name": "posts-application",
   "version": "1.0.0",
-  "description": "",
-  "author": "Flusinerd",
-  "private": true,
+  "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -21,9 +19,10 @@
     "test:e2e": "echo 'No e2e tests implemented yet.'"
   },
   "dependencies": {
-    "@apollo/gateway": "2.4.8",
+    "@apollo/federation": "0.38.1",
+    "@apollo/gateway": "2.2.3",
     "@apollo/server": "4.7.4",
-    "@apollo/subgraph": "2.4.8",
+    "@apollo/subgraph": "2.2.3",
     "@nestjs/apollo": "12.0.1",
     "@nestjs/common": "10.0.2",
     "@nestjs/core": "10.0.2",
