--- a/sample/31-graphql-federation-code-first/posts-application/package.json
+++ b/sample/31-graphql-federation-code-first/posts-application/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "@apollo/federation": "0.38.1",
-    "@apollo/gateway": "2.4.8",
+    "@apollo/gateway": "2.2.3",
     "@apollo/server": "4.7.5",
+    "@apollo/subgraph": "2.2.3",
     "@nestjs/apollo": "12.0.3",
     "@nestjs/common": "10.0.3",
     "@nestjs/core": "10.0.3",
