--- a/sample/31-graphql-federation-code-first/users-application/package.json
+++ b/sample/31-graphql-federation-code-first/users-application/package.json
@@ -1,8 +1,7 @@
 {
   "name": "users-application",
   "version": "1.0.0",
-  "description": "",
-  "author": "Flusinerd",
+  "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -20,9 +19,9 @@
     "test:e2e": "echo 'No e2e tests implemented yet.'"
   },
   "dependencies": {
-    "@apollo/gateway": "2.4.8",
+    "@apollo/gateway": "2.2.3",
     "@apollo/server": "4.7.5",
-    "@apollo/subgraph": "2.4.8",
+    "@apollo/subgraph": "2.2.3",
     "@nestjs/apollo": "12.0.3",
     "@nestjs/common": "10.0.3",
     "@nestjs/core": "10.0.3",
