--- a/packages/platform-fastify/package.json
+++ b/packages/platform-fastify/package.json
@@ -28,7 +28,7 @@
   },
   "peerDependencies": {
     "@fastify/static": "^6.0.0",
-    "@fastify/view": "^7.0.0",
+    "@fastify/view": "^7.0.0 || ^8.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0"
   },
