ci: update circleci configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,18 @@
-version: 2
+version: 2.1
 
 parameters:
   legacy-node-version:
     type: string
-    default: "ignore"
+    default: 'ignore'
   maintenance-node-version:
     type: string
-    default: "16.20"
+    default: '16.20'
   active-node-version:
     type: string
-    default: "18.17"
+    default: '18.17'
   current-node-version:
     type: string
-    default: "20.5"
+    default: '20.5'
 
 aliases:
   - &restore-cache
@@ -35,7 +35,6 @@ aliases:
     run:
       name: Test
       command: npm run test
-
 
 jobs:
   build:
@@ -63,7 +62,7 @@ jobs:
       - when:
           condition:
             not:
-              equals: [ "<< parameters.node-version >>", "ignore" ]
+              equal: ['<< parameters.node-version >>', 'ignore']
           steps:
             - checkout
             - *restore-cache
@@ -71,7 +70,11 @@ jobs:
             - *build-packages
             - when:
                 condition:
-                  equals: [ "<< parameters.node-version >>", "<< pipeline.parameters.maintenance-node-version >>" ]
+                  equal:
+                    [
+                      '<< parameters.node-version >>',
+                      '<< pipeline.parameters.maintenance-node-version >>',
+                    ]
                 steps:
                   - run:
                       name: Test (coverage)
@@ -84,7 +87,11 @@ jobs:
             - when:
                 condition:
                   not:
-                    equals: [ "<< parameters.node-version >>", "<< pipeline.parameters.maintenance-node-version >>" ]
+                    equal:
+                      [
+                        '<< parameters.node-version >>',
+                        '<< pipeline.parameters.maintenance-node-version >>',
+                      ]
                 steps:
                   - *run-unit-tests
 
@@ -113,7 +120,7 @@ jobs:
       - when:
           condition:
             not:
-              equals: [ "<< parameters.node-version >>", "ignore" ]
+              equal: ['<< parameters.node-version >>', 'ignore']
           steps:
             - checkout
             - run:
@@ -167,7 +174,7 @@ jobs:
     docker:
       - image: cimg/node:<< pipeline.parameters.maintenance-node-version >>
     environment:
-      - DISABLE_OPENCOLLECTIVE: true
+      DISABLE_OPENCOLLECTIVE: 'true'
     steps:
       - checkout
       - *restore-cache
@@ -186,12 +193,13 @@ workflows:
             - build
           matrix:
             parameters:
-              node-version: [
-                "<< pipeline.parameters.legacy-node-version >>",
-                "<< pipeline.parameters.maintenance-node-version >>",
-                "<< pipeline.parameters.active-node-version >>",
-                "<< pipeline.parameters.current-node-version >>"
-              ]
+              node-version:
+                [
+                  '<< pipeline.parameters.legacy-node-version >>',
+                  '<< pipeline.parameters.maintenance-node-version >>',
+                  '<< pipeline.parameters.active-node-version >>',
+                  '<< pipeline.parameters.current-node-version >>',
+                ]
       - lint:
           requires:
             - build
@@ -200,12 +208,13 @@ workflows:
             - build
           matrix:
             parameters:
-              node-version: [
-                "<< pipeline.parameters.legacy-node-version >>",
-                "<< pipeline.parameters.maintenance-node-version >>",
-                "<< pipeline.parameters.active-node-version >>",
-                "<< pipeline.parameters.current-node-version >>"
-              ]
+              node-version:
+                [
+                  '<< pipeline.parameters.legacy-node-version >>',
+                  '<< pipeline.parameters.maintenance-node-version >>',
+                  '<< pipeline.parameters.active-node-version >>',
+                  '<< pipeline.parameters.current-node-version >>',
+                ]
       - samples:
           requires:
             - build
