--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,14 @@ jobs:
     steps:
       - when:
           condition:
+            equal: [ "<< parameters.node-version >>", "ignore" ]
+          steps:
+            - run:
+                name: Skip
+                command: |
+                  echo Skipping
+      - when:
+          condition:
             not:
               equal: [ "<< parameters.node-version >>", "ignore" ]
           steps:
@@ -109,6 +117,14 @@ jobs:
     working_directory: ~/nest
     machine: true
     steps:
+      - when:
+          condition:
+            equal: [ "<< parameters.node-version >>", "ignore" ]
+          steps:
+            - run:
+                name: Skip
+                command: |
+                  echo Skipping
       - when:
           condition:
             not:
@@ -176,7 +192,6 @@ jobs:
           command: npm run build:samples
 
 workflows:
-  version: 2
   build-and-test:
     jobs:
       - build
