--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,12 @@
 version: 2.1
 
 parameters:
+  check-legacy-node-version:
+    type: boolean
+    default: false
   legacy-node-version:
     type: string
-    default: "ignore"
+    default: "14.21.3"
   maintenance-node-version:
     type: string
     default: "16.20"
@@ -61,16 +64,14 @@ jobs:
     steps:
       - when:
           condition:
-            equal: [ "<< parameters.node-version >>", "ignore" ]
+            not: << pipeline.parameters.check-legacy-node-version >>
           steps:
             - run:
                 name: Skip
                 command: |
                   echo Skipping
       - when:
-          condition:
-            not:
-              equal: [ "<< parameters.node-version >>", "ignore" ]
+          condition: << pipeline.parameters.check-legacy-node-version >>
           steps:
             - checkout
             - *restore-cache
@@ -119,16 +120,14 @@ jobs:
     steps:
       - when:
           condition:
-            equal: [ "<< parameters.node-version >>", "ignore" ]
+            not: << pipeline.parameters.check-legacy-node-version >>
           steps:
             - run:
                 name: Skip
                 command: |
                   echo Skipping
       - when:
-          condition:
-            not:
-              equal: [ "<< parameters.node-version >>", "ignore" ]
+          condition: << pipeline.parameters.check-legacy-node-version >>
           steps:
             - checkout
             - run:
