feat(platform-bun-ws): bun websocket adapter

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -23,6 +23,9 @@
       "path": "./platform-ws/tsconfig.build.json"
     },
     {
+      "path": "./platform-bun-ws/tsconfig.build.json"
+    },
+    {
       "path": "./testing/tsconfig.build.json"
     },
     {
